docker/k8s/fault-injection/nginx-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: nginx-fault-injection-service
  namespace: demo-istio-fault-injection
spec:
  selector:
    app: nginx-fault-injection
  ports:
  - name: http
    port: 8080
    targetPort: 80
    protocol: TCP
