docker/k8s/fault-injection/nginx-gateway.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: nginx-fault-injection-gateway
  namespace: demo-istio-fault-injection
spec:
  selector:
    app: istio-ingressgateway
  servers:
  - hosts:
    - lab.k8s.io
    port:
      name: http
      number: 80
      protocol: HTTP
